--- a/Users/src/app/components/users-list/users-list.component.html
+++ b/Users/src/app/components/users-list/users-list.component.html
@@ -1,1 +1,35 @@
-<p>users list</p>
+<table class="table table-bordered caption-top">
+  <caption>List of users</caption>
+    <thead>
+      <tr >
+        <th scope="col">id</th>
+        <th scope="col">name</th>
+        <th scope="col">username</th>
+        <th scope="col">email</th>
+        <th scope="col">website</th>
+        <th scope="col" style="width: 20px;"></th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let user of userArray">
+        <th scope="row">{{user.id}}</th>
+        <td>{{user.name}}</td>
+        <td>{{user.username}}</td>
+        <td>{{user.email}}</td>
+        <td>{{user.website}}</td>
+        <td>
+          <div class="btn-group dropstart">
+            <button type="button" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+            </button>
+            <ul class="dropdown-menu dropdown-menu">
+              <li><a class="dropdown-item" (click)="deleteUser(user)">delete</a></li>
+              <li><a class="dropdown-item" (click)="userDetails(user)">details</a></li>
+            </ul>
+          </div>
+      </td>
+      </tr>
+    </tbody>
+  </table>
+
+ 
+
