--- a/Users/src/app/components/authorization/authorization.component.scss
+++ b/Users/src/app/components/authorization/authorization.component.scss
@@ -16,3 +16,16 @@
 }
 
 
+@media only screen and (max-width: 500px) { 
+    .auth-form{
+    width: 400px;
+    }
+}
+
+@media only screen and (max-width: 400px) { 
+    .auth-form{
+    width: 300px;
+    }
+}
+
+
